--- a/weekly-assignment/week-4/assign-4.2/tran_calorie.html
+++ b/weekly-assignment/week-4/assign-4.2/tran_calorie.html
@@ -16,8 +16,8 @@
 
     <!-- CSS Files -->
     <link rel="stylesheet" href="tran_calorie.css">
-    <link rel="stylesheet" href="/site.css">
-    <link rel="stylesheet" href="/theme.css">
+    <link rel="stylesheet" href="site.css">
+    <link rel="stylesheet" href="theme.css">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,regular,500,600,700" rel="stylesheet" />
