--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
          <!-- List of weekly assignments -->
          <h3>Weekly Assignments</h3>
          <ul>
-            <li><a href="https://github.com/ptran999/web-330/blob/master/weekly-assignment/week-2/assign-2.2/tran_palindrome.html">Assignment 2.2</a></li>   
-            <li><a href="https://github.com/ptran999/web-330/blob/master/weekly-assignment/week-3/assign-3.2/tran-restaurant.html">Assignment 3.2</a></li>  
-            <li><a href="https://github.com/ptran999/web-330/blob/master/weekly-assignment/week-4/assign-4.2/tran_calorie.html">Assignment 4.2</a></li>
+            <li><a href="https://ptran999.github.io/web-330/master/weekly-assignment/week-2/assign-2.2/tran_palindrome.html">Assignment 2.2</a></li>   
+            <li><a href="https://ptran999.github.io/web-330/master/weekly-assignment/week-3/assign-3.2/tran-restaurant.html">Assignment 3.2</a></li>  
+            <li><a href="https://ptran999.github.io/web-330/master/weekly-assignment/week-4/assign-4.2/tran_calorie.html">Assignment 4.2</a></li>
             <li><a href="">Assignment 5.2</a></li>
             <li><a href="">Assignment 6.2</a></li>
             <li><a href="">Assignment 7.2</a></li>
