--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="https://ptran999.github.io/web-330/weekly-assignment/week-4/assign-4.2/tran_calorie.html">Assignment 4.2</a></li>
             <li><a href="https://ptran999.github.io/web-330/weekly-assignment/week-5/assign-5.5/tran-bobs-auto-repair.html">Assignment 5.2</a></li>
             <li><a href="https://ptran999.github.io/web-330/weekly-assignment/week-6/assign-6.2/tran-future-value.html">Assignment 6.2</a></li>
-            <li><a href="">Assignment 7.2</a></li>
+            <li><a href="https://ptran999.github.io/web-330/weekly-assignment/week-7/assign-7.2/tran-whatabook.html">Assignment 7.2</a></li>
             <li><a href="">Assignment 8.2</a></li>
          </ul>
          <!--List of projects -->
